--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Kevin Lindsey",
   "license": "MIT",
   "dependencies": {
+    "kld-regex": "0.0.3",
     "kld-text-utils": "0.0.2"
   }
 }
