--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "dependencies": {
     "kld-regex": "0.0.6",
     "kld-text-utils": "0.0.2"
+  },
+  "devDependencies": {
+    "mocha": "^3.1.2"
   }
 }
