--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "kld-text-utils": "0.0.2"
   },
   "devDependencies": {
-    "mocha": "^3.1.2"
+    "mocha": "^3.1.2",
+    "mustache": "^2.2.1"
   }
 }
