--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
   "keywords": [
     "6502",
     "assembly",
+    "assembly language",
     "assembler",
     "disassembler",
-    "emulator"
+    "emulator",
+    "microprocessor"
   ],
   "author": "Kevin Lindsey",
   "license": "MIT",
   "dependencies": {
-    "kld-regex": "0.0.6",
-    "kld-text-utils": "0.0.2"
+    "kld-regex": "0.0.8",
+    "kld-text-utils": "0.0.3"
   },
   "devDependencies": {
     "mocha": "^3.1.2",
